added variables to notebook

--- a/hello.ipynb
+++ b/hello.ipynb
@@ -2,31 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "console.log(\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Brian\n"
+     ]
+    }
    ],
-   "outputs": [],
-   "metadata": {}
+   "source": [
+    "var myName = \"Brian\"\n",
+    "console.log(\"Hello,\",myName)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "var my Name = \"Bad Variable\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
-  "language_info": {
+  "kernelspec": {
+   "display_name": "Javascript (Node.js)",
+   "language": "javascript",
    "name": "javascript"
   },
-  "kernelspec": {
+  "language_info": {
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
    "name": "javascript",
-   "display_name": "Javascript (Node.js)"
+   "version": "16.9.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
