--- a/Decisions/decisions.ipynb
+++ b/Decisions/decisions.ipynb
@@ -3,86 +3,80 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "source": [
-    "true"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "true"
       ]
      },
+     "execution_count": 1,
      "metadata": {},
-     "execution_count": 1
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "true"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "source": [
-    "false"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "false"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "false"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "source": [
-    "var myBoolean = true\r\n",
-    "console.log(myBoolean)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "true\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "var myBoolean = true\n",
+    "console.log(myBoolean)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "source": [
-    "// not a boolean\r\n",
-    "var yesString = \"yes\"\r\n",
-    "var noNumber = 1"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "// not a boolean\n",
+    "var yesString = \"yes\"\n",
+    "var noNumber = 1"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "source": [
-    "// simple expressions\r\n",
-    "console.log(\"2 > 3 =\", 2 > 3)\r\n",
-    "console.log(\"2 < 3 =\", 2 < 3)\r\n",
-    "console.log(\"2 >= 3 =\", 2 >= 3)\r\n",
-    "console.log(\"2 <= 3 =\", 2 <= 3)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2 > 3 = false\n",
       "2 < 3 = true\n",
@@ -91,24 +85,22 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "// simple expressions\n",
+    "console.log(\"2 > 3 =\", 2 > 3)\n",
+    "console.log(\"2 < 3 =\", 2 < 3)\n",
+    "console.log(\"2 >= 3 =\", 2 >= 3)\n",
+    "console.log(\"2 <= 3 =\", 2 <= 3)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "source": [
-    "// simple equal comparisons\r\n",
-    "console.log(\"2 == 3 =\", 2 == 3)\r\n",
-    "console.log(\"2 === 3 =\", 2 === 3)\r\n",
-    "console.log(\"3 == '3' =\", 3 == \"3\")\r\n",
-    "console.log(\"3 === '3' =\", 3 === \"3\")\r\n",
-    "console.log(\"3 === '3' =\", 3 === \"3\")\r\n",
-    "console.log(\"'3' === '3' =\", \"3\" === \"3\")\r\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2 == 3 = false\n",
       "2 === 3 = false\n",
@@ -119,63 +111,47 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "// simple equal comparisons\n",
+    "console.log(\"2 == 3 =\", 2 == 3)\n",
+    "console.log(\"2 === 3 =\", 2 === 3)\n",
+    "console.log(\"3 == '3' =\", 3 == \"3\")\n",
+    "console.log(\"3 === '3' =\", 3 === \"3\")\n",
+    "console.log(\"3 === '3' =\", 3 === \"3\")\n",
+    "console.log(\"'3' === '3' =\", \"3\" === \"3\")\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "source": [
-    "// not a comparison\r\n",
-    "var two = 3\r\n",
-    "two = 5\r\n",
-    "two == 3"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "false"
       ]
      },
+     "execution_count": 17,
      "metadata": {},
-     "execution_count": 17
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "// not a comparison\n",
+    "var two = 3\n",
+    "two = 5\n",
+    "two == 3"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "source": [
-    "// comparing variables\r\n",
-    "var number1 = 3\r\n",
-    "var number2 = 6\r\n",
-    "\r\n",
-    "// numeric comparison\r\n",
-    "console.log(number1 === number2)\r\n",
-    "console.log(number1 <= number2)\r\n",
-    "console.log(!(number1 !== number2))\r\n",
-    "\r\n",
-    "// floating comparison\r\n",
-    "// caution: be careful comparing floating point values\r\n",
-    "// as you might not get what you expect\r\n",
-    "var float1 = 1.2345\r\n",
-    "var float2 = 3.14159\r\n",
-    "console.log(float1 === float2)\r\n",
-    "console.log(float2 === Math.PI)\r\n",
-    "console.log(1.00000000000001 === (1 + 0.00000000000001))\r\n",
-    "\r\n",
-    "// string comparison\r\n",
-    "var string1 = \"abc\"\r\n",
-    "var string2 = \"abd\"\r\n",
-    "console.log(string1 === string2)\r\n",
-    "console.log(string1 < string2)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "false\n",
       "true\n",
@@ -188,72 +164,81 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "// comparing variables\n",
+    "var number1 = 3\n",
+    "var number2 = 6\n",
+    "\n",
+    "// numeric comparison\n",
+    "console.log(number1 === number2)\n",
+    "console.log(number1 <= number2)\n",
+    "console.log(!(number1 !== number2))\n",
+    "\n",
+    "// floating comparison\n",
+    "// caution: be careful comparing floating point values\n",
+    "// as you might not get what you expect\n",
+    "var float1 = 1.2345\n",
+    "var float2 = 3.14159\n",
+    "console.log(float1 === float2)\n",
+    "console.log(float2 === Math.PI)\n",
+    "console.log(1.00000000000001 === (1 + 0.00000000000001))\n",
+    "\n",
+    "// string comparison\n",
+    "var string1 = \"abc\"\n",
+    "var string2 = \"abd\"\n",
+    "console.log(string1 === string2)\n",
+    "console.log(string1 < string2)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "source": [
-    "// a simple decision\r\n",
-    "if (2 < 3) {\r\n",
-    "    console.log(\"Yes! 2 < 3!\")\r\n",
-    "}"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Yes! 2 < 3!\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "// a simple decision\n",
+    "if (2 < 3) {\n",
+    "    console.log(\"Yes! 2 < 3!\")\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "source": [
-    "// decision using variables\r\n",
-    "var name = \"Bob\"\r\n",
-    "if (name === \"Bob\") {\r\n",
-    "    console.log(\"Hi! Bob!\")\r\n",
-    "}"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Hi! Bob!\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "// decision using variables\n",
+    "var name = \"Bob\"\n",
+    "if (name === \"Bob\") {\n",
+    "    console.log(\"Hi! Bob!\")\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "source": [
-    "// different formatting\r\n",
-    "var name = \"Bob\"\r\n",
-    "if( name === \"Bob\" ) console.log(\"Hi! Bob!\")\r\n",
-    "\r\n",
-    "// bad formatting\r\n",
-    "if (name ===    \"Bob\" ) \r\n",
-    "{       \r\n",
-    "console.log(\"Hi! Bob!\") \r\n",
-    "    }\r\n",
-    "\r\n",
-    "// good formatting\r\n",
-    "if (name === \"Bob\") { // watch the position of \"whitespace\"\r\n",
-    "    console.log(\"Hi! Bob!\") // indented 4 spaces\r\n",
-    "}\r\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Hi! Bob!\n",
       "Hi! Bob!\n",
@@ -261,151 +246,175 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "// different formatting\n",
+    "var name = \"Bob\"\n",
+    "if( name === \"Bob\" ) console.log(\"Hi! Bob!\")\n",
+    "\n",
+    "// bad formatting\n",
+    "if (name ===    \"Bob\" ) \n",
+    "{       \n",
+    "console.log(\"Hi! Bob!\") \n",
+    "    }\n",
+    "\n",
+    "// good formatting\n",
+    "if (name === \"Bob\") { // watch the position of \"whitespace\"\n",
+    "    console.log(\"Hi! Bob!\") // indented 4 spaces\n",
+    "}\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "source": [
-    "// if - else statement\r\n",
-    "var number1 = 1\r\n",
-    "if (number1 === 2)\r\n",
-    "    console.log(\"1 = 2!\")\r\n",
-    "else\r\n",
-    "    console.log(\"1 != 2\")"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "1 != 2\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "// if - else statement\n",
+    "var number1 = 1\n",
+    "if (number1 === 2)\n",
+    "    console.log(\"1 = 2!\")\n",
+    "else\n",
+    "    console.log(\"1 != 2\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "source": [
-    "// nested if statements\r\n",
-    "var code = \"superAdministrat0r\"\r\n",
-    "if (code === \"P@ssw0rd\") {\r\n",
-    "    console.log(\"Welcome, user!\")\r\n",
-    "} else {\r\n",
-    "    if (code === \"admin1strator\") {\r\n",
-    "        console.log(\"Welcome, lord!\")\r\n",
-    "    } else {\r\n",
-    "        if (code === \"superAdministrat0r\") {\r\n",
-    "            console.log(\"All hail!\")\r\n",
-    "        }\r\n",
-    "    }\r\n",
-    "}"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Welcome, user!\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "// nested if statements\n",
+    "var code = \"superAdministrat0r\"\n",
+    "if (code === \"P@ssw0rd\") {\n",
+    "    console.log(\"Welcome, user!\")\n",
+    "} else {\n",
+    "    if (code === \"admin1strator\") {\n",
+    "        console.log(\"Welcome, lord!\")\n",
+    "    } else {\n",
+    "        if (code === \"superAdministrat0r\") {\n",
+    "            console.log(\"All hail!\")\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "// nested if statements\r\n",
-    "var code = \"superAdministrat0r\"\r\n",
-    "if (code === \"P@ssw0rd\") {\r\n",
-    "    console.log(\"Welcome, user!\")\r\n",
-    "} else if (code === \"admin1strator\") {\r\n",
-    "    console.log(\"Welcome, lord!\")\r\n",
-    "} else if (code === \"superAdministrat0r\") {\r\n",
-    "    console.log(\"All hail!\")\r\n",
-    "} else {\r\n",
-    "    console.log(\"Login failed.\")\r\n",
-    "}"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "// nested if statements\n",
+    "var code = \"superAdministrat0r\"\n",
+    "if (code === \"P@ssw0rd\") {\n",
+    "    console.log(\"Welcome, user!\")\n",
+    "} else if (code === \"admin1strator\") {\n",
+    "    console.log(\"Welcome, lord!\")\n",
+    "} else if (code === \"superAdministrat0r\") {\n",
+    "    console.log(\"All hail!\")\n",
+    "} else {\n",
+    "    console.log(\"Login failed.\")\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "source": [
-    "// compound if statement\r\n",
-    "var number1 = 123\r\n",
-    "var name = \"John\"\r\n",
-    "if (number1 === 123 && name === \"John\") {\r\n",
-    "    console.log(\"AND!\")\r\n",
-    "}\r\n",
-    "if (number1 === 123 || name === \"John\") {\r\n",
-    "    console.log(\"OR!\")\r\n",
-    "}"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "AND!\n",
       "OR!\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "// compound if statement\n",
+    "var number1 = 123\n",
+    "var name = \"John\"\n",
+    "if (number1 === 123 && name === \"John\") {\n",
+    "    console.log(\"AND!\")\n",
+    "}\n",
+    "if (number1 === 123 || name === \"John\") {\n",
+    "    console.log(\"OR!\")\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "source": [
-    "// a rather long example\r\n",
-    "var number1 = 123\r\n",
-    "var boolean1 = false\r\n",
-    "var string1 = \"password\"\r\n",
-    "var float1 = 3.1\r\n",
-    "var character1 = 'x'\r\n",
-    "if ((number1 === 123 && boolean1 === false) || \r\n",
-    "    (string1 === \"password\" && float1 === 3.1 && character1 === 'x')) {\r\n",
-    "    console.log(\"Wow...that's long!\")\r\n",
-    "}"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Wow...that's long!\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "// a rather long example\n",
+    "var number1 = 123\n",
+    "var boolean1 = false\n",
+    "var string1 = \"password\"\n",
+    "var float1 = 3.1\n",
+    "var character1 = 'x'\n",
+    "if ((number1 === 123 && boolean1 === false) || \n",
+    "    (string1 === \"password\" && float1 === 3.1 && character1 === 'x')) {\n",
+    "    console.log(\"Wow...that's long!\")\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Brain Warmup!__  \n",
+    "Create a program that will allow the user to enter in two primary colours and then output the mix of the two colours.  \n",
+    "e.g. red + yellow = orange, blue + red = violet"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
-  "language_info": {
-   "name": "javascript",
-   "version": "16.9.1",
-   "mimetype": "application/javascript",
-   "file_extension": ".js"
-  },
   "kernelspec": {
-   "name": "javascript",
    "display_name": "Javascript (Node.js)",
-   "language": "javascript"
-  }
+   "language": "javascript",
+   "name": "javascript"
+  },
+  "language_info": {
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "16.9.1"
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
