added object examples

--- a/Arrays/arrays.ipynb
+++ b/Arrays/arrays.ipynb
@@ -474,6 +474,157 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elppA\n",
+      "[ 'e', 'l', 'p', 'p', 'A' ]\n",
+      "elppA\n"
+     ]
+    }
+   ],
+   "source": [
+    "// challenge\n",
+    "\n",
+    "// Create a program that takes a word or phrase, input from the user, and displays the reverse of that input.\n",
+    "// E.g.\n",
+    "// Apple => elppA\n",
+    "\n",
+    "var userInput = \"Apple\"\n",
+    "\n",
+    "// long way\n",
+    "var reversed = \"\"\n",
+    "for (let i = userInput.length - 1; i >= 0 ; i--) {\n",
+    "    reversed += userInput[i]\n",
+    "}\n",
+    "console.log(reversed)\n",
+    "\n",
+    "// shorter way\n",
+    "var array = Array.from(userInput)\n",
+    "var reversed = array.reverse().join('')\n",
+    "console.log(array)\n",
+    "console.log(reversed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alppe\n"
+     ]
+    }
+   ],
+   "source": [
+    "// extra challenge\n",
+    "// As an extra challenge, reverse everything except the first and last letters.\n",
+    "// e.g.\n",
+    "//   Apple => Alppe\n",
+    "\n",
+    "var userInput = \"Apple\"\n",
+    "\n",
+    "var array = Array.from(userInput)\n",
+    "\n",
+    "var middle = array.slice(1,-1)\n",
+    "var middleString = middle.reverse().join('')\n",
+    "\n",
+    "console.log(array[0] + middleString + array[array.length-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "// destructuring an array\n",
+    "\n",
+    "var a = 1\n",
+    "var b = 2\n",
+    "var c = 3\n",
+    "\n",
+    "var array = [a, b, c]\n",
+    "\n",
+    "// add one to each element\n",
+    "for (var i = 0; i < array.length; i++) {\n",
+    "    array[i]++;\n",
+    "}\n",
+    "\n",
+    "[a, b, c] = array\n",
+    "\n",
+    "console.log(a, b, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Rest element must be last element",
+     "output_type": "error",
+     "traceback": [
+      "evalmachine.<anonymous>:18",
+      "var [a, ...b, c] = array",
+      "        ^^^^",
+      "",
+      "SyntaxError: Rest element must be last element",
+      "    at new Script (node:vm:100:7)",
+      "    at createScript (node:vm:257:10)",
+      "    at Object.runInThisContext (node:vm:305:10)",
+      "    at run ([eval]:1054:15)",
+      "    at onRunRequest ([eval]:888:18)",
+      "    at onMessage ([eval]:848:13)",
+      "    at process.emit (node:events:394:28)",
+      "    at emit (node:internal/child_process:917:12)",
+      "    at processTicksAndRejections (node:internal/process/task_queues:84:21)"
+     ]
+    }
+   ],
+   "source": [
+    "// destructuring large array to few variables\n",
+    "var array = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "var [a, b, c] = array\n",
+    "console.log(a)\n",
+    "console.log(b)\n",
+    "console.log(c)\n",
+    "\n",
+    "console.log(\"_\".repeat(10))\n",
+    "\n",
+    "var [a, b, ...c] = array\n",
+    "console.log(a)\n",
+    "console.log(b)\n",
+    "console.log(c)\n",
+    "\n",
+    "console.log(\"_\".repeat(10))\n",
+    "\n",
+    "// you must have the ellipsis on the last element\n",
+    "var [a, ...b, c] = array\n",
+    "console.log(a)\n",
+    "console.log(b)\n",
+    "console.log(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
