added high low game additions

--- a/Functions/functions.ipynb
+++ b/Functions/functions.ipynb
@@ -47,6 +47,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "// return values\n",
+    "function sum( a, b ) {\n",
+    "    var c = a + b;\n",
+    "    return c;\n",
+    "}\n",
+    "var answer = sum( 1, 2 )\n",
+    "console.log(answer);"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
