added crappy math

--- a/Functions/functions.ipynb
+++ b/Functions/functions.ipynb
@@ -70,6 +70,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum = undefined, diff = undefined, product = undefined, div = undefined\n",
+      "sum = 3, diff = -1, product = 2, div = 0.5\n",
+      "sum = 5, product = 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "// return multiple values via objects\n",
+    "function doMath( a, b ) {\n",
+    "\tvar sum = a + b\n",
+    "\tvar diff = a - b\n",
+    "\tvar prod = a * b\n",
+    "\tvar div = a / b\n",
+    "\treturn {sum: sum, diff: diff, prod: prod, div: div}\n",
+    "}\n",
+    "var {s, d, p, d} = doMath( 1, 2 )\n",
+    "console.log(`sum = ${s}, diff = ${d}, product = ${p}, div = ${d}`)\n",
+    "var {sum, diff, prod, div} = doMath( 1, 2 )\n",
+    "console.log(`sum = ${sum}, diff = ${diff}, product = ${prod}, div = ${div}`)\n",
+    "var {sum, prod} = doMath( 2, 3 )\n",
+    "console.log(`sum = ${sum}, product = ${prod}`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// function expressions\n",
+    "var square = function (number) {\n",
+    "\treturn number * number;\n",
+    "}\n",
+    "var answer = square(5);\n",
+    "answer"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
