added file examples

--- a/Functions/functions.ipynb
+++ b/Functions/functions.ipynb
@@ -130,6 +130,55 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "// don't do this\n",
+    "\n",
+    "function printInfinity() {\n",
+    "\n",
+    "    console.log(\"Hello\");\n",
+    "\n",
+    "    printInfinity();\n",
+    "\n",
+    "}\n",
+    "\n",
+    "printInfinity();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1, 2, 3, 4, 5 ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'[1,2,3,4,5]'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var array = [1, 2, 3, 4, 5]\n",
+    "console.log(array)\n",
+    "var str = JSON.stringify(array)\n",
+    "str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
